@@ -1,4 +1,5 @@
 0.9-13
+- webtide() improvements
 - read.observatory() added
 - read.ctd.itp() added
 - mapImage() speeded up (60X in 1deg SST example)
